--- a/galaxies/gemini/server/view/index.html
+++ b/galaxies/gemini/server/view/index.html
@@ -1,7 +1,17 @@
 <html>
-    <head>
-        <title>Portal - 首页</title>
-    </head>
-    <body>
-    </body>
+  <head>
+    <title>Portal - 首页</title>
+  </head>
+  <body>
+    <table>
+      <tr>
+        <td style="width:50%">
+          飞船
+        </td>
+        <td style="width:50%">
+          基地
+        </td>
+      </tr>
+    </table>
+  </body>
 </html>
